fixed padding and gap for mainLeft

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@
     border-radius: 20px;
 }
 
-.mainTxtd {
+.mainTxtd, #announce, #trending {
     box-sizing: border-box; /* prevents padding from adding width to the div */
     padding: 40px;
 }
@@ -98,7 +98,6 @@
 #mainRight {
     display: grid;
     grid-template-rows:0.2fr 1fr 0.2fr 1fr;
-    gap:20px;
     margin-bottom:100px;
     margin-left:10px;
     margin-right: 30px;
@@ -107,3 +106,4 @@
     background-color: white;
     border-radius: 20px;
 }
+
